# Fore-optics_Test

./: GaussianOptics.py  Meas_data_plot.ipynb  Meas_freq_data_plot.ipynb  Measurement_March.ipynb  README.md  Untitled-1.ipynb  Untitled-2.ipynb  champ_optics_Model.py  data_fitting.ipynb  data_fitting.py  environment.yaml  mcmc_test.ipynb  mcmc_test_1_95m.ipynb  pyproject.toml  results_plot_1_47m.ipynb  results_plot_1_95m.ipynb  results_plot_2_49m.ipynb  results_plot_93cm.ipynb  setup.sh  test.ipynb
