[tool.poetry]
name = "fore-optics-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
jupyterlab = "^4.1.6"
emcee = "^3.1.6"
corner = "^2.2.2"
getdist = "^1.4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
